Subject: Update tools list
Change details:
    1. Update tools list.

Version:

References:

Notes:

--- a/Utility_tools_setup_scripts/install.config
+++ b/Utility_tools_setup_scripts/install.config
@@ -4,3 +4,7 @@ p4merge:,default,,,
 wine:,,dev,,
 winmerge:,,dev,,
 xrdp:min,,,,
+apt-file:min,,,,
+net-tools:min,,,,
+openssh-server:min,,,,
+ubuntu-restricted-extras:,,,full,
