Subject: Update install.config for acroread
Change details:
    1. Update install.config for acroread.

Version:

References:

Notes:

--- a/Utility_tools_setup_scripts/install.config
+++ b/Utility_tools_setup_scripts/install.config
@@ -9,4 +9,5 @@ net-tools:min,,,,
 openssh-server:min,,,,
 ubuntu-restricted-extras:,,,full,
 timeshift:,,,full,
-openjdk-18-jdk,min,,,,
+openjdk-18-jdk:min,,,,
+acroread:,,dev,,
