Subject: [Workspace backup] Add commit-id and changeset-hash based diff (includes untrakced files) to a backup location
Change details:
    1. [Workspace backup] Add commit-id and changeset-hash based diff (includes untrakced files) to a backup location.

Version:

References:

Notes:

--- a/.systemConfig
+++ b/.systemConfig
@@ -1,1 +1,9 @@
-userroot="$HOME/DEV"
+#!/bin/bash
+
+repo_root="GIT-REPOS"
+repo_username="IndranilNandy"
+repo_provider="https://github.com"
+
+user_root="$HOME/DEV"
+workspace_backup_local="$HOME/DEV/git_diff_backup"
+workspace_backup_remote="$HOME/thinclient_drives/Y:/Workspace_backups"
