Subject: [Tool: WorkspaceDelta] Add sync command (partial implementation) and fix other issues
Change details:
    1. [Tool: WorkspaceDelta] Add sync command (partial implementation) and fix other issues.

Version:

References:

Notes:

--- a/.systemConfig
+++ b/.systemConfig
@@ -7,3 +7,5 @@ repo_provider="https://github.com"
 user_devroot="$HOME/DEV"
 workspace_backup_local="$HOME/DEV/git_diff_backup"
 workspace_backup_remote="$HOME/thinclient_drives/Y:/Workspace_backups"
+
+workspace_restore_root="$HOME/DEV/WorkspaceDelta/RestoreSpace"
