--- a/Dev_tools_setup_scripts/k8/config/.clusterconfig
+++ b/Dev_tools_setup_scripts/k8/config/.clusterconfig
@@ -1,2 +1,4 @@
-controlplane: k8-controlplanenode
-workers:    k8-worker1 k8-worker2
+--------ROLE:   List of machines-------
+controlplane:   k8-controlplanenode
+workers:        k8-worker1 k8-worker2
+clients:        indranil-vm-2
