Subject: [K8] Provide provision for supplying cluster and machine configurations through command line parameters
Change details:
    1. Provide provision for supplying cluster and machine configurations through command line parameters.

Version:

References:

Notes:

--- a/Dev_tools_setup_scripts/k8/config/.clusterconfig
+++ b/Dev_tools_setup_scripts/k8/config/.clusterconfig
@@ -1,4 +1,1 @@
---------ROLE:   List of machines-------
-controlplane:   k8-controlplanenode
-workers:        k8-worker1 k8-worker2
-clients:        indranil-vm-2
+/home/indranil/MyTools/Linux_Tools/Dev_tools_setup_scripts/k8/config/defaults/.clusterconfigdefault
