--- a/Dev_tools_setup_scripts/k8/config/.machineconfig
+++ b/Dev_tools_setup_scripts/k8/config/.machineconfig
@@ -1,5 +1,1 @@
-------MACHINES:         USERNAME----------
-k8-controlplanenode:    indranilnandy
-k8-worker1:             indranilnandy
-k8-worker2:             indranilnandy
-indranil-vm-2:          indranil
+/home/indranil/MyTools/Linux_Tools/Dev_tools_setup_scripts/k8/config/defaults/.machineconfigdefault
