Subject: [K8] Fix issues
Change details:
    1. Fix issues.

Version:

References:

Notes:

--- a/Dev_tools_setup_scripts/k8/config/.machineconfig
+++ b/Dev_tools_setup_scripts/k8/config/.machineconfig
@@ -1,1 +1,1 @@
-/home/indranil/MyTools/Linux_Tools/Dev_tools_setup_scripts/k8/config/defaults/.machineconfigdefault
+/home/indranil/MyTools/Linux_Tools/Dev_tools_setup_scripts/k8/config/userdefined/Cluster_2/.machineconfig
