--- a/Dev_tools_setup_scripts/k8/config/.clusterconfig
+++ b/Dev_tools_setup_scripts/k8/config/.clusterconfig
@@ -1,1 +1,1 @@
-/home/indranil/MyTools/Linux_Tools/Dev_tools_setup_scripts/k8/config/defaults/.clusterconfigdefault
+/home/indranil/MyTools/Linux_Tools/Dev_tools_setup_scripts/k8/config/userdefined/Cluster_2/.clusterconfig
