Subject: [configuration] Add list of my aliases with autocompletion
Change details:
    1. Add list of my aliases with autocompletion.

Version:

References:

Notes:

--- a/Env_setup_scripts/configuration/alias_configurer/.config
+++ b/Env_setup_scripts/configuration/alias_configurer/.config
@@ -6,3 +6,6 @@ aliasloader=".aliasloader"
 
 completealias_url="https://github.com/cykerway/complete-alias.git"
 completealias_src="$config_src"/complete_alias
+
+envloader="$configloader_src"/.envloader
+
