--- a/Env_setup_scripts/configuration/ref_configurer/.config
+++ b/Env_setup_scripts/configuration/ref_configurer/.config
@@ -1,8 +1,9 @@
 #!/bin/bash
 
 config_src="$HOME/.myconfig"
+scriptRefsRoot="/usr/local/bin/myscriptrefs"
+
 configloader_src="$config_src"/.configloader
 refloader="$configloader_src"/.refloader
-
 envloader="$configloader_src"/.envloader
 
