Subject: Remove unwanted symlinks from git repo
Change details:
    1. Remove unwanted symlinks from git repo.

Version:

References:

Notes:

--- a/.gitignore
+++ b/.gitignore
@@ -29,4 +29,8 @@
 
 # generated list of locally installed tools through myinstaller
 .localAptPkgTools
+
+# Runtime created symlinks
 .fullAptPkgTools
+config/.clusterconfig
+config/.machineconfig
