Subject: [refref] Add script ref for k8 scripts
Change details:
    1. Add script ref for k8 scripts.

Version:

References:

Notes:

--- a/Env_setup_scripts/utilityScripts/refref/.refconfig
+++ b/Env_setup_scripts/utilityScripts/refref/.refconfig
@@ -1,2 +1,4 @@
 .initCluster $HOME/MyTools/Linux_Tools/Dev_tools_setup_scripts/k8
 .tearCluster $HOME/MyTools/Linux_Tools/Dev_tools_setup_scripts/k8
+.initClusterClients $HOME/MyTools/Linux_Tools/Dev_tools_setup_scripts/k8
+
