Subject: [myalias] Add responsibility for aliasloader creation and autocompletion
Change details:
    1. Add responsibility for aliasloader creation and autocompletion.

Version:

References:

Notes:

--- a/Env_setup_scripts/utilityScripts/myalias/.config
+++ b/Env_setup_scripts/utilityScripts/myalias/.config
@@ -1,11 +1,10 @@
 #!/bin/bash
 
-config_src="$HOME/.myconfig"
-configloader_src="$config_src"/.configloader
-aliasloader=".aliasloader"
+configloader_src="$HOME"/.myconfig/.configloader
+aliasloader="$configloader_src"/.aliasloader
 
 completealias_url="https://github.com/cykerway/complete-alias.git"
-completealias_src="$config_src"/complete_alias
+completealias_src="$HOME"/.myconfig/complete_alias
 
 envloader="$configloader_src"/.envloader
 
