Subject: [createref] Provide provision to change name of ref script + [refref] Add --create option
Change details:
    1. [createref] Provide provision to change name of ref script + [refref] Add --create option.

Version:

References:

Notes:

--- a/Env_setup_scripts/utilityScripts/refref/.refconfig
+++ b/Env_setup_scripts/utilityScripts/refref/.refconfig
@@ -2,3 +2,4 @@
 .tearCluster $HOME/MyTools/Linux_Tools/Dev_tools_setup_scripts/k8
 .initClusterClients $HOME/MyTools/Linux_Tools/Dev_tools_setup_scripts/k8
 
+.setup $HOME/MyTools/Linux_Tools setup-full
