Subject: [softclean] Add soft cleaning of user defined environment
Change details:
    1. Add soft cleaning of user defined environment.

Version:

References:

Notes:

--- a/Env_setup_scripts/utilityScripts/myscriptref/.refconfig
+++ b/Env_setup_scripts/utilityScripts/myscriptref/.refconfig
@@ -2,4 +2,5 @@
 .tearCluster $HOME/MyTools/Linux_Tools/Dev_tools_setup_scripts/k8
 .initClusterClients $HOME/MyTools/Linux_Tools/Dev_tools_setup_scripts/k8
 
-.setup $HOME/MyTools/Linux_Tools setup-full
+.setup $HOME/MyTools/Linux_Tools tools-setup
+.softclean $HOME/MyTools/Linux_Tools tools-softclean
