Subject: [myfunc][qn] Add function to quick open Nautilus file browser from terminal with particual dirs
Change details:
    1, Add function to quick open Nautilus file browser from terminal with particual dirs.

Version:

References:

Notes:

--- a/Env_setup_scripts/utilityScripts/myscriptref/.refconfig
+++ b/Env_setup_scripts/utilityScripts/myscriptref/.refconfig
@@ -4,3 +4,6 @@
 
 .setup $HOME/MyTools/Linux_Tools tools-setup
 .softclean $HOME/MyTools/Linux_Tools tools-softclean
+
+.withGIT $HOME/MyTools/Linux_Tools/Env_setup_scripts/remotemachinesetup
+.withSSH $HOME/MyTools/Linux_Tools/Env_setup_scripts/remotemachinesetup
