Subject:[myinstaller] Add support for snap package manager
Change details:
    1. Add support for snap package manager.

Version:

References:

Notes:

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@
 
 # generated list of locally installed tools through myinstaller
 .localAptPkgTools
-
+.localSnapPkgTools
 # Runtime created symlinks
 .fullAptPkgTools
 Dev_tools_setup_scripts/k8/config/.clusterconfig
