Subject:[myinstaller] Adding support for installing snap tools for custom-setup
Change details:
    1. Adding support for installing snap tools for custom-setup.

Version:

References:

Notes:

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@
 .localSnapPkgTools
 # Runtime created symlinks
 .fullAptPkgTools
+.fullSnapPkgTools
 Dev_tools_setup_scripts/k8/config/.clusterconfig
 Dev_tools_setup_scripts/k8/config/.machineconfig
 
