Subject: [k8] Configure to take login and sudo credentials from file + add help contents
Change details:
    1. Configure to take login and sudo credentials from file + add help contents.

Version:

References:

Notes:

--- a/.gitignore
+++ b/.gitignore
@@ -35,4 +35,6 @@
 .fullSnapPkgTools
 Dev_tools_setup_scripts/k8/config/.clusterconfig
 Dev_tools_setup_scripts/k8/config/.machineconfig
+Dev_tools_setup_scripts/k8/config/.credconfig
+.credconfig
 
