Subject: [wsd] Add repo for book-sourcecode of microservice-book
Change details:
    1. Add repo for book-sourcecode of microservice-book.

Version:

References:

Notes:

--- a/Post_setup/workspace_backup/config/.wsConfig
+++ b/Post_setup/workspace_backup/config/.wsConfig
@@ -1,3 +1,4 @@
 /home/indranil/DEV/GIT-REPOS/T29local
 /home/indranil/DEV/GIT-REPOS/PowershellTools
 /home/indranil/DEV/GIT-REPOS/DevAssistDocs
+/home/indranil/DEV/GIT-REPOS/CodeSamples/Book-SourceCodes/Microservices-with-Spring-Boot-and-Spring-Cloud-2E
