--- a/Post_setup/ws_setup/config/.wsConfig
+++ b/Post_setup/ws_setup/config/.wsConfig
@@ -5,3 +5,4 @@ https://github.com/IndranilNandy/DevAssistDocs.git                              
 https://github.com/IndranilNandy/T29.git                                                        n   c           T29local
 https://github.com/IndranilNandy/Books-Microservices-with-Spring-Boot-and-Spring-Cloud-2E.git   y   main        CodeSamples/Book-SourceCodes/Spring/Microservices-with-Spring-Boot-and-Spring-Cloud-2E      spring,books,codesamples        book-microsvc
 https://github.com/IndranilNandy/WorkspaceCollection.git                                        y   master      PracticeWS                                                                                  practice
+https://github.com/IndranilNandy/Samples.git                                                    y   master      CodeSamples/Aggregated
