Subject: [ws_setup] Add list, load, status options to 'ws' command
Change details:
    1. Add list, load, status options to 'ws' command.

Version:

References:

Notes:

--- a/Post_setup/ws_setup/config/.wsConfig
+++ b/Post_setup/ws_setup/config/.wsConfig
@@ -1,8 +1,9 @@
-# Remote          ShouldDownload?[y/n]          DefaultBranch       Local           Tags        QuickLink
-#########################################################################################################
-https://github.com/IndranilNandy/PowershellTools.git                                            y   dev-linux   PowershellTools
-https://github.com/IndranilNandy/DevAssistDocs.git                                              y   master      DevAssistDocs
-https://github.com/IndranilNandy/T29.git                                                        n   c           T29local
-https://github.com/IndranilNandy/Books-Microservices-with-Spring-Boot-and-Spring-Cloud-2E.git   y   main        CodeSamples/Book-SourceCodes/Spring/Microservices-with-Spring-Boot-and-Spring-Cloud-2E      spring,books,codesamples        book-microsvc
-https://github.com/IndranilNandy/WorkspaceCollection.git                                        y   master      PracticeWS                                                                                  practice
-https://github.com/IndranilNandy/Samples.git                                                    y   master      CodeSamples/Aggregated
+###################################################################################################################
+# SerialNo------->Remote------->ShouldDownload?[y/n]------->DefaultBranch------->Local------->Tags------->QuickLink
+###################################################################################################################
+1. https://github.com/IndranilNandy/PowershellTools.git                                             y   dev-linux   Tools/PowershellTools/
+2. https://github.com/IndranilNandy/DevAssistDocs.git                                               y   master      Tools/DevAssistDocs
+3. https://github.com/IndranilNandy/T29.git                                                         n   c           T29local
+4. https://github.com/IndranilNandy/Books-Microservices-with-Spring-Boot-and-Spring-Cloud-2E.git    y   main        CodeSamples/Book-SourceCodes/Spring/Microservices-with-Spring-Boot-and-Spring-Cloud-2E      spring,books,codesamples        book-microsvc
+5. https://github.com/IndranilNandy/PracticeWS.git                                                  y   master      PracticeWS                                                                                  practice
+6. https://github.com/IndranilNandy/Samples.git                                                     y   master      CodeSamples/AggregatedSamples
