Subject: [mycrontab] Add basic functionality
Change details:
    1. Add basic functionality.

Version:

References:

Notes:

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ Dev_tools_setup_scripts/k8/config/.machineconfig
 Dev_tools_setup_scripts/k8/config/.credconfig
 .credconfig
 
+Post_setup/crontab/cronlogs/*.log
+Post_setup/crontab/cronjobs/generated/*.sh
