Subject: [mycrontab] Add more features
Change details:
    1. Add more features.

Version:

References:

Notes:

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ Dev_tools_setup_scripts/k8/config/.credconfig
 
 Post_setup/mycrontab/cronlogs/*.log
 Post_setup/mycrontab/cronjobs/generated/*.sh
+
+Post_setup/mycrontab/cronbackups/cron-defs/backup-*
+Post_setup/mycrontab/cronbackups/mycron-defs/
