Subject: [mycrontab] Fix issue while initializing because of missing .crontab-local
Change details:
    1. Fix issue while initializing because of missing .crontab-local.

Version:

References:

Notes:

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ Dev_tools_setup_scripts/k8/config/.machineconfig
 Dev_tools_setup_scripts/k8/config/.credconfig
 .credconfig
 
+Post_setup/mycrontab/.crontabs/.crontab-local
 Post_setup/mycrontab/cronlogs/*.log
 Post_setup/mycrontab/cronjobs/generated/*.sh
 
