Subject: [ws][qcd] Update workspace mappings
Change details:
    1. Update workspace mappings.

Version:

References:

Notes:

--- a/Env_setup_scripts/utilityScripts/ws/config/.wsConfig
+++ b/Env_setup_scripts/utilityScripts/ws/config/.wsConfig
@@ -7,3 +7,4 @@
 4. https://github.com/IndranilNandy/Books-Microservices-with-Spring-Boot-and-Spring-Cloud-2E.git    y   main        CodeSamples/Book-SourceCodes/Spring/Microservices-with-Spring-Boot-and-Spring-Cloud-2E      spring,books,codesamples        books-microsvc
 5. https://github.com/IndranilNandy/PracticeWS.git                                                  y   master      PracticeWS                      practice                practice                                             practice
 6. https://github.com/IndranilNandy/Samples.git                                                     y   master      CodeSamples/AggregatedSamples   samples                 samples-aggr
+7. https://github.com/IndranilNandy/Workspaces.git                                                  y   master      PracticeWS/IDEwise              practice, ide           idespace
