Subject: [k8] Changing Cluster_4 configuration
Change details:
    1. Changing Cluster_4 configuration.

Version:

References:

Notes:

--- a/Dev_tools_setup_scripts/k8/config/userdefined/Cluster_4/.clusterconfig
+++ b/Dev_tools_setup_scripts/k8/config/userdefined/Cluster_4/.clusterconfig
@@ -1,4 +1,4 @@
 --------ROLE:   List of machines-------
 controlplane:   userver1
 workers:        serv-worker1
-clients:        ubuntudevbox
+clients:        vm-devbox1
