--- a/Dev_tools_setup_scripts/k8/config/userdefined/Cluster_4/.machineconfig
+++ b/Dev_tools_setup_scripts/k8/config/userdefined/Cluster_4/.machineconfig
@@ -1,4 +1,4 @@
 ------MACHINES:         USERNAME----------
 userver1:    		    indranilnandy
 serv-worker1:           indranilnandy
-ubuntudevbox:           indranilnandy
+vm-devbox1:             indranilnandy
