Subject: [ws][mycrontab] Update ws configs and mycrontab job definitions
Change details:
    1. Update ws configs and mycrontab job definitions.

Version:

References:

Notes:

--- a/Env_setup_scripts/utilityScripts/ws/config/.wsConfig
+++ b/Env_setup_scripts/utilityScripts/ws/config/.wsConfig
@@ -9,3 +9,4 @@
 6. https://github.com/IndranilNandy/T29.git                                                                 n   c           T29local
 7. https://github.com/IndranilNandy/Forked--Books-Microservices-with-Spring-Boot-and-Spring-Cloud-2E.git    y   main        CodeSamples/Book-SourceCodes/Spring/Microservices-with-Spring-Boot-and-Spring-Cloud-2E      spring,books,codesamples        books-microsvc
 8. https://github.com/IndranilNandy/Forked--Books-Spring-in-action-5.git                                    y   main        CodeSamples/Book-SourceCodes/Spring/Spring-in-action                                        spring,books,codesamples        books-spring-in-action
+9. https://github.com/IndranilNandy/Forked--Books-learning-helm.git                                         y   main        CodeSamples/Book-SourceCodes/Helm/Learning-helm                                             helm,books,codesamples          books-learning-helm
