Subject: [postgres] Configure pgadmin4-desktop if it is an individual installation
Change details:
    1. Configure pgadmin4-desktop if it is an individual installation.

Version:

References:

Notes:

--- a/.systemConfig
+++ b/.systemConfig
@@ -1,5 +1,7 @@
 #!/bin/bash
 
+export LINUX_TOOLS_full_installation=true
+
 repo_root="GIT-REPOS"
 repo_username="IndranilNandy"
 repo_provider="https://github.com"
