--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,16 @@
         "titleBar.inactiveBackground": "#f9e64f99",
         "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "#f9e64f"
+    "peacock.color": "#f9e64f",
+    "sqltools.connections": [
+        {
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 5432,
+            "driver": "PostgreSQL",
+            "name": "admin-connection",
+            "database": "postgres",
+            "username": "admin"
+        }
+    ]
 }
