Subject: [postgres][squirrel] Install SQuirrel SQL Client
Change details:
    1. Install SQuirrel SQL Client.

Version:

References:

Notes:

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,5 +29,19 @@
             "database": "postgres",
             "username": "admin"
         }
-    ]
+    ],
+    "plpgsqlLanguageServer.database": "postgres",
+    "plpgsqlLanguageServer.user": "admin",
+    "plpgsqlLanguageServer.password": "amarbabamaa123!",
+    "plpgsqlLanguageServer.definitionFiles": [
+        // Support glob.
+        "**/*.sql",
+        "**/*.psql",
+        "**/*.pgsql"
+    ],
+    // The supported extention types are ['*.pgsql', '*.psql'].
+    // If you want to use this extension in '*.sql', add the following settings.
+    // "files.associations": {
+    //     "*.sql": "postgres"
+    // }
 }
