--- a/Env_setup_scripts/utilityScripts/ws/config/.wsConfig
+++ b/Env_setup_scripts/utilityScripts/ws/config/.wsConfig
@@ -1,12 +1,13 @@
 ###################################################################################################################
 # SerialNo------->Remote------->ShouldDownload?[y/n]------->DefaultBranch------->Local------->Tags------->QuickLink
 ###################################################################################################################
-1. https://github.com/IndranilNandy/PowershellTools.git                                                     y   dev-linux   Tools/PowershellTools/          tools,powershell
-2. https://github.com/IndranilNandy/DevAssistDocs.git                                                       y   master      Tools/DevAssistDocs             tools,devassist
-3. https://github.com/IndranilNandy/PracticeWS.git                                                          y   master      PracticeWS                      practice                practice
-4. https://github.com/IndranilNandy/Samples.git                                                             y   master      CodeSamples/AggregatedSamples   samples                 samples-aggr
-5. https://github.com/IndranilNandy/Workspaces.git                                                          y   master      PracticeWS/IDEwise              practice, ide           idespace
-6. https://github.com/IndranilNandy/T29.git                                                                 n   c           T29local
-7. https://github.com/IndranilNandy/Forked--Books-Microservices-with-Spring-Boot-and-Spring-Cloud-2E.git    y   main        CodeSamples/Book-SourceCodes/Spring/Microservices-with-Spring-Boot-and-Spring-Cloud-2E      spring,books,codesamples        books-microsvc
-8. https://github.com/IndranilNandy/Forked--Books-Spring-in-action-5.git                                    y   main        CodeSamples/Book-SourceCodes/Spring/Spring-in-action                                        spring,books,codesamples        books-spring-in-action
-9. https://github.com/IndranilNandy/Forked--Books-learning-helm.git                                         y   main        CodeSamples/Book-SourceCodes/Helm/Learning-helm                                             helm,books,codesamples          books-learning-helm
+1.  https://github.com/IndranilNandy/PowershellTools.git                                                        y   dev-linux   Tools/PowershellTools/          tools,powershell
+2.  https://github.com/IndranilNandy/DevAssistDocs.git                                                          y   master      Tools/DevAssistDocs             tools,devassist
+3.  https://github.com/IndranilNandy/PracticeWS.git                                                             y   master      PracticeWS                      practice                practice
+4.  https://github.com/IndranilNandy/Samples.git                                                                y   master      CodeSamples/AggregatedSamples   samples                 samples-aggr
+5.  https://github.com/IndranilNandy/Workspaces.git                                                             y   master      PracticeWS/IDEwise              practice, ide           idespace
+6.  https://github.com/IndranilNandy/T29.git                                                                    n   c           T29local
+7.  https://github.com/IndranilNandy/Forked--Books-Microservices-with-Spring-Boot-and-Spring-Cloud-2E.git       y   main        CodeSamples/Book-SourceCodes/Spring/Microservices-with-Spring-Boot-and-Spring-Cloud-2E      spring,books,codesamples        books-microsvc
+8.  https://github.com/IndranilNandy/Forked--Books-Spring-in-action-5.git                                       y   main        CodeSamples/Book-SourceCodes/Spring/Spring-in-action                                        spring,books,codesamples        books-spring-in-action
+9.  https://github.com/IndranilNandy/Forked--Books-learning-helm.git                                            y   main        CodeSamples/Book-SourceCodes/Helm/Learning-helm                                             helm,books,codesamples          books-learning-helm
+10. https://github.com/IndranilNandy/Forked--pagila.git                                                         y   master      DataSamples/Database/Postgres/pagila                                                        datasamples,pagila              pagila
