--- a/.systemConfig
+++ b/.systemConfig
@@ -1,5 +1,6 @@
 #!/bin/bash
 
+export LINUX_TOOLS_user_home="/home/indranilnandy"
 export LINUX_TOOLS_full_installation=true
 
 repo_root="GIT-REPOS"
@@ -16,3 +17,5 @@ export LINUX_TOOLS_tools_base="$HOME"/MyTools/Linux_Tools
 
 export LINUX_TOOLS_dev_tools_base="$LINUX_TOOLS_tools_base"/Dev_tools_setup_scripts
 export LINUX_TOOLS_postgres_base="$LINUX_TOOLS_dev_tools_base"/postgres
+
+export LINUX_TOOLS_pagila="/home/indranilnandy/DEV/GIT-REPOS/DataSamples/Database/Postgres/pagila"
