--- a/.systemConfig
+++ b/.systemConfig
@@ -18,4 +18,7 @@ export LINUX_TOOLS_tools_base="$HOME"/MyTools/Linux_Tools
 export LINUX_TOOLS_dev_tools_base="$LINUX_TOOLS_tools_base"/Dev_tools_setup_scripts
 export LINUX_TOOLS_postgres_base="$LINUX_TOOLS_dev_tools_base"/postgres
 
+export LINUX_TOOLS_scripts_store_base="$LINUX_TOOLS_tools_base"/Scripts_store/
+export LINUX_TOOLS_spring_helper="$LINUX_TOOLS_scripts_store_base"/Spring_helper/
+
 export LINUX_TOOLS_pagila="/home/indranilnandy/DEV/GIT-REPOS/DataSamples/Database/Postgres/pagila"
