Subject: [springstarter] Update to add more functionalities
Change details:
    1. Update to add more functionalities.

Version:

References:

Notes:

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@
 # generated tools list for verification stage
 .allTools
 
+# env scripts
+*.env
+
 # generated list of locally installed tools through myinstaller
 .localAptPkgTools
 .localSnapPkgTools
