Subject: [springstarter][postgresql] Create and configure postgresql container from compose template and init sql template
Change details:
    1. Create and configure postgresql container from compose template and init sql template.

Version:

References:

Notes:

--- a/DevAssist/spring-assist/springstarter/db/pgsql/container/configuration/.env.sample
+++ b/DevAssist/spring-assist/springstarter/db/pgsql/container/configuration/.env.sample
@@ -28,7 +28,7 @@ COMPOSE_POSTGRESQL_DATABASE_USERNAME=           - same as ${POSTGRESQL_DATABASE_
 COMPOSE_POSTGRESQL_DATABASE_PASSWORD=           - same as ${POSTGRESQL_DATABASE_PASSWORD}
 COMPOSE_POSTGRESQL_ADMINER_PORT=                - db adminer port
 COMPOSE_POSTGRESQL_IMAGE=                       - same as the image name in docker-compose.yaml
-COMPOSE_POSTGRESQL_SCRIPTSTORE                  - location of created init.sql from sqltemplate, used to initiate db in container, default value:/home/indranilnandy/linux_tools_runtime/springstarter/db/postgresql
+COMPOSE_POSTGRESQL_SCRIPTSTORE                  - location of created init.sql from sqltemplate, used to initiate db in container, volume shared with container, default value:/home/indranilnandy/linux_tools_runtime/springstarter/db/postgresql
 
 COMPOSE_USER_HOME=                              - same as ${HOME} (no end '/')
 COMPOSE_APPNAME=                                - same as ${spring.application.name}
