--- a/Scripts_store/Spring_helper/Project/config/logging/log4j2/log4j2-empty-sample.yaml
+++ b/Scripts_store/Spring_helper/Project/config/logging/log4j2/log4j2-empty-sample.yaml
@@ -6,5 +6,5 @@
 
 # IF YOU WANT TO USE SPRING BOOT's LOGGING PROPERTIES THROUGH application.yaml, THEN YOU DO NOT NEED THIS YAML
 
-# WE WILL PUT ALL THE LOG4J2 CONFIGURATION YAMLSs UNDER {project-root-folder}/log-config
+# WE WILL PUT ALL THE LOG4J2 CONFIGURATION YAMLSs UNDER {project-root-folder}/config/log-config
 # __________________________________________________________________________________________________________________________________________________
