Subject: [Scripts_store][Config][app_yaml] Update
Change details:
    1. Update.

Version:

References:

Notes:

--- a/Scripts_store/Spring_helper/Project/config/app_yaml/application-db-init-script-hb.yaml
+++ b/Scripts_store/Spring_helper/Project/config/app_yaml/application-db-init-script-hb.yaml
@@ -16,7 +16,8 @@ custom:
     hibernate:
         init:
             import:
-                location: "/hb-db-init"
+                # location: "classpath:hb-db-init"
+                location: file:${custom.project.location.database}/init/hibernate
                 files:
                     - import-script-01.sql
                     - import-script-02.sql
