Subject: [Scripts_store] Update snippets, app-yamls and list of aliases
Change details:
    1. Update snippets, app-yamls and list of aliases.

Version:

References:

Notes:

--- a/Scripts_store/Spring_helper/Project/config/app_yaml/application-root.yaml
+++ b/Scripts_store/Spring_helper/Project/config/app_yaml/application-root.yaml
@@ -58,11 +58,14 @@ custom:
                     - grp-db-init-data-only
                 grp-initdb-dmt:
                     - grp-initdb-liquibase
+                grp-dev-overrides:
+                    - dev-overrides
                 grp-initdb:
                     # - grp-initdb-nodmt
                     - grp-initdb-nodmt-schema-gen-only
                     # - grp-initdb-nodmt-init-data-only
                     # - grp-initdb-dmt
+                    - grp-dev-overrides
 
 
 spring:
